objects/CRMfusionDBR101__Scenario_Rule__c.object
<CustomObject>
    <customHelpPage>CRMfusionDBR101__DB_Help</customHelpPage>
    <fields>
        <fullName>CRMfusionDBR101__AlphaClean__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Strip all non-alphanumeric characters.</inlineHelpText>
        <label>AlphaClean</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__English_Fuzzy__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Convert the field to the English phonetic equivalent for matching.</inlineHelpText>
        <label>English Fuzzy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Field_Display_Value__c</fullName>
        <inlineHelpText>The primary field used in this scenario rule.</inlineHelpText>
        <label>Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Field_Name__c</fullName>
        <description>The API name of the selected field.</description>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__First_XX_Letters__c</fullName>
        <inlineHelpText>If the Mapping Type is set to &quot;First XX Letters&quot;, this field specifies the number of letters to match.</inlineHelpText>
        <label>Number of Letters</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__First_XX_Words__c</fullName>
        <inlineHelpText>If the Mapping Type is set to &quot;First XX Words&quot;, this field specifies the number of letters to match.</inlineHelpText>
        <label>Number of Words</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Mapping_Type__c</fullName>
        <label>Mapping Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CRMfusionDBR101__Match_Field__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>First Name</fullName>
                </value>
                <value>
                    <fullName>Clean Account Name</fullName>
                </value>
                <value>
                    <fullName>Country Match</fullName>
                </value>
                <value>
                    <fullName>Domain</fullName>
                </value>
                <value>
                    <fullName>Exact</fullName>
                    <default>true</default>
                    <label>Exact</label>
                </value>
                <value>
                    <fullName>First XX Letters</fullName>
                </value>
                <value>
                    <fullName>Numeric</fullName>
                </value>
                <value>
                    <fullName>Relaxed NA Phone Match</fullName>
                </value>
                <value>
                    <fullName>Relaxed Street Address Match</fullName>
                </value>
                <value>
                    <fullName>Street Address Match</fullName>
                </value>
                <value>
                    <fullName>Zip 5 and 9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Match_Blank__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>By default, blank fields are not matched against each other.  If this option is checked, then two blank fields are considered to be matching.</inlineHelpText>
        <label>Match Blank</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Match_Field__c</fullName>
        <description>Deprecated</description>
        <label>Match Field</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CRMfusionDBR101__Scenario_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>First Name</fullName>
                </value>
                <value>
                    <fullName>Last Name</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Company</fullName>
                </value>
                <value>
                    <fullName>Account Name</fullName>
                </value>
                <value>
                    <fullName>Account ID</fullName>
                </value>
                <value>
                    <fullName>Account Number</fullName>
                </value>
                <value>
                    <fullName>Site</fullName>
                </value>
                <value>
                    <fullName>Billing Street</fullName>
                </value>
                <value>
                    <fullName>Billing City</fullName>
                </value>
                <value>
                    <fullName>Billing State</fullName>
                </value>
                <value>
                    <fullName>Billing Postal Code</fullName>
                </value>
                <value>
                    <fullName>Billing Country</fullName>
                </value>
                <value>
                    <fullName>Shipping Street</fullName>
                </value>
                <value>
                    <fullName>Shipping City</fullName>
                </value>
                <value>
                    <fullName>Shipping State</fullName>
                </value>
                <value>
                    <fullName>Shipping Postal Code</fullName>
                </value>
                <value>
                    <fullName>Shipping Country</fullName>
                </value>
                <value>
                    <fullName>Street</fullName>
                </value>
                <value>
                    <fullName>City</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Postal Code</fullName>
                </value>
                <value>
                    <fullName>Country</fullName>
                </value>
                <value>
                    <fullName>Mailing Street</fullName>
                </value>
                <value>
                    <fullName>Mailing City</fullName>
                </value>
                <value>
                    <fullName>Mailing State</fullName>
                </value>
                <value>
                    <fullName>Mailing Postal Code</fullName>
                </value>
                <value>
                    <fullName>Mailing Country</fullName>
                </value>
                <value>
                    <fullName>Other Street</fullName>
                </value>
                <value>
                    <fullName>Other City</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Regex__c</fullName>
        <inlineHelpText>Please enter a valid regular expression.</inlineHelpText>
        <label>Regular Expression</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Related_Field_Display_Value__c</fullName>
        <description>The field we&apos;re matching against on the Account/Contact objects for Lead to X scenarios.</description>
        <inlineHelpText>This is the Account or Contact field that is matched against the Lead field in this rule for Lead to Account or Lead to Contact scenarios.</inlineHelpText>
        <label>Related Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Related_Field_Name__c</fullName>
        <description>The API name of the Account/Contact field for Lead to X scenarios.</description>
        <label>Related Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Scenario_Type__c</fullName>
        <inlineHelpText>This must be the same as the parent scenario&apos;s type.</inlineHelpText>
        <label>Scenario Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Lead to Contact</fullName>
                </value>
                <value>
                    <fullName>Lead to Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Scenario__c</fullName>
        <inlineHelpText>Pre-populates with the scenario the rule is being created for, do not change this value.</inlineHelpText>
        <label>Scenario</label>
        <referenceTo>CRMfusionDBR101__Scenario__c</referenceTo>
        <relationshipLabel>DupeBlocker Scenario Rules</relationshipLabel>
        <relationshipName>Scenario_Rules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Transpose__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Match all words in the selected field, disregarding the order of the words.</inlineHelpText>
        <label>Transpose</label>
        <type>Checkbox</type>
    </fields>
    <label>DupeBlocker Scenario Rule</label>
    <nameField>
        <displayFormat>Rule: {0}</displayFormat>
        <label>Rule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DupeBlocker Scenario Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CRMfusionDBR101__First_XX_Letters</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( CRMfusionDBR101__Mapping_Type__c, &quot;First XX Letters&quot; ) , OR( ISNULL( CRMfusionDBR101__First_XX_Letters__c ), CRMfusionDBR101__First_XX_Letters__c &lt; 1, CRMfusionDBR101__First_XX_Letters__c &gt; 254 ) )</errorConditionFormula>
        <errorDisplayField>CRMfusionDBR101__First_XX_Letters__c</errorDisplayField>
        <errorMessage>If the mapping type is set to &quot;First XX Letters&quot;, you must specify a value less than 255 for this field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRMfusionDBR101__First_XX_Words</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( CRMfusionDBR101__Mapping_Type__c, &quot;First XX Words&quot; ) , OR( ISNULL( CRMfusionDBR101__First_XX_Words__c ), CRMfusionDBR101__First_XX_Words__c &lt; 1, CRMfusionDBR101__First_XX_Words__c &gt; 99 ) )</errorConditionFormula>
        <errorDisplayField>CRMfusionDBR101__First_XX_Words__c</errorDisplayField>
        <errorMessage>If the mapping type is set to &quot;First XX Words&quot;, you must specify a value less than 100 for this field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRMfusionDBR101__Regex_Not_Empty</fullName>
        <active>true</active>
        <errorConditionFormula>AND( OR( ISPICKVAL( CRMfusionDBR101__Mapping_Type__c, &quot;Regular Expression&quot; ), ISPICKVAL( CRMfusionDBR101__Mapping_Type__c, &quot;Regular Expression Y/N&quot; ) ) , ISBLANK( CRMfusionDBR101__Regex__c ) )</errorConditionFormula>
        <errorDisplayField>CRMfusionDBR101__Regex__c</errorDisplayField>
        <errorMessage>If the mapping type is set to &quot;Regular Expression&quot; or &quot;Regular Expression Y/N&quot;, you must specify a valid regular expression.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRMfusionDBR101__Validate_Scenario_Type</fullName>
        <active>true</active>
        <description>Make sure the scenario type matches the parent scenario type.</description>
        <errorConditionFormula>TEXT( CRMfusionDBR101__Scenario_Type__c ) &lt;&gt; TEXT( CRMfusionDBR101__Scenario__r.CRMfusionDBR101__Scenario_Type__c )</errorConditionFormula>
        <errorDisplayField>CRMfusionDBR101__Scenario_Type__c</errorDisplayField>
        <errorMessage>The Scenario Type must be the same as the parent Scenario.</errorMessage>
    </validationRules>
</CustomObject>